--- a/index.html
+++ b/index.html
@@ -42,7 +42,8 @@ My google scholar citation number is more than <a href="https://scholar.google.c
 <ol>
 
 <LI>Bowen Hao, <b>Jing Zhang</b>, Hongzhi Yin, Cuiping Li, and Hong Chen. Pre-Training Graph Neural Networks for Cold-Start Users and Items Representation.
-In <a href="https://ecmlpkdd2020.net/"><i>Proceedings of International Conference on Web Search and Data Mining(<a href="https://www.wsdm-conference.org/2021/">WSDB'21</a>).
+In <a href="https://ecmlpkdd2020.net/"><i>Proceedings of International Conference on Web Search and Data Mining</i></a>
+(<a href="https://www.wsdm-conference.org/2021/">WSDB'21</a>).
 [<a href="https://arxiv.org/pdf/2012.07064.pdf">PDF</a>]
 </LI>	
 	
