--- a/index.html
+++ b/index.html
@@ -42,19 +42,19 @@ My google scholar citation number is more than <a href="https://scholar.google.c
 <ol>
 
 <LI>Bowen Hao, <b>Jing Zhang</b>, Hongzhi Yin, Cuiping Li, and Hong Chen. Pre-Training Graph Neural Networks for Cold-Start Users and Items Representation.
-In <a href="https://ecmlpkdd2020.net/"><i>Proceedings of International Conference on Web Search and Data Mining</i></a>
+In <a href="https://ecmlpkdd2020.net/">Proceedings of International Conference on Web Search and Data Mining</a>
 (<a href="https://www.wsdm-conference.org/2021/">WSDB'21</a>).
 [<a href="https://arxiv.org/pdf/2012.07064.pdf">PDF</a>]
 </LI>	
 	
 <LI>Bowen Hao, <b>Jing Zhang</b>, Cuiping Li, Hong Chen, and Hongzhi Yin. Recommending Courses in MOOCs for Jobs: An Auto Weak Supervision Approach.
-In <a href="https://ecmlpkdd2020.net/"><i>Proceedings of European Conference on Machine Learning and Principles and Practice of Knowledge Discovery in Databases</i></a>
+In <a href="https://ecmlpkdd2020.net/">Proceedings of European Conference on Machine Learning and Principles and Practice of Knowledge Discovery in Databases</a>
 (<a href="https://ecmlpkdd2020.net/">ECML-PKDD'20</a>).
 [<a href="https://arxiv.org/pdf/2012.14234.pdf">PDF</a>]
 </LI>	
 	
 <LI>Jiezhong Qiu, Qibin Chen, Yuxiao Dong, <b>Jing Zhang</b>, Hongxia Yang, Ming Ding, Kuansan Wang, and Jie Tang. GCC: Graph Contrastive Coding for Graph Neural Network Pre-Training.
-In <a href="http://kdd.org/kdd2020/"><i>Proceedings of the Twenty-Sixth ACM SIGKDD International Conference on Knowledge Discovery and Data Mining</i></a>
+In <a href="http://kdd.org/kdd2020/">Proceedings of the Twenty-Sixth ACM SIGKDD International Conference on Knowledge Discovery and Data Mining</a>
 (<a href="http://kdd.org/kdd2020/">KDD'20</a>).
 </LI>	
 	
