--- a/index.html
+++ b/index.html
@@ -377,7 +377,7 @@ Frontiers of Computer Science in China, 2008, Volume 2, Issue 1, pages 94-105.</
 <ul>
 <li><p>Reviewer: TKDE, TOIS, TKDD, DMKD, 中国科学</p>
 </li>
-<li><p>PC member:SIGKDD2020, WWW2020, SIGKDD2019,IJCAI2016,ASONAM2016,ICWSM2016,CIKM2016,ICWSM2015,ICDM2014,ASONAM2014</p>
+<li><p>PC member:SIGKDD2021, IJCAI2021, SIGKDD2020, WWW2020, SIGKDD2019,IJCAI2016,ASONAM2016,ICWSM2016,CIKM2016,ICWSM2015,ICDM2014,ASONAM2014</p>
 </li>
 </ul>
 
