--- a/index.html
+++ b/index.html
@@ -56,7 +56,9 @@ In <a href="https://ecmlpkdd2020.net/">Proceedings of European Conference on Mac
 <LI>Jiezhong Qiu, Qibin Chen, Yuxiao Dong, <b>Jing Zhang</b>, Hongxia Yang, Ming Ding, Kuansan Wang, and Jie Tang. GCC: Graph Contrastive Coding for Graph Neural Network Pre-Training.
 In <a href="http://kdd.org/kdd2020/">Proceedings of the Twenty-Sixth ACM SIGKDD International Conference on Knowledge Discovery and Data Mining</a>
 (<a href="http://kdd.org/kdd2020/">KDD'20</a>).
+[<a href="https://arxiv.org/pdf/2006.09963.pdf">PDF</a>]
 </LI>	
+	
 	
 <LI>Xiaobin Tang, <b>Jing Zhang</b>, Bo Chen, Yang Yang, Hong Chen, Cuiping Li. BERT-INT: A BERT-based Interaction Model For Knowledge Graph Alignment.
 In <a href="https://ijcai20.org/">Proceedings of the 29th International Joint Conference on Artificial Intelligence</a> 
@@ -106,7 +108,6 @@ In <a href="http://www.aaai.org/Conferences/AAAI/aaai17.php">Proceedings of the 
 [<a href="publications/AAAI17-Zhang-et-al-structural-influence.pdf">PDF</a>]
 [<a href="publications/AAAI17-poster-Zhang-et-al-structinf.pdf">Poster</a>]
 </LI>
-	
 	
 
 <LI>Xiaotao Gu, Hong Yang, Jie Tang, and <b>Jing Zhang</b>. Web User Profiling using Data Redundancy.
