--- a/index.html
+++ b/index.html
@@ -259,6 +259,16 @@ href="publications/Zhang-et-al-Expert-Finding.pdf">PDF</a>]</li>
 <h2>Journal Publications </h2>
 <ol>
 
+Jiarong Xu, Yang Yang, Chunping Wang, Zongtao Liu, <b>Jing Zhang</b>, Lei Chen and Jiangang Lu.
+Robust Network Enhancement from Flawed Networks.
+<a href="http://www.computer.org/portal/web/tkde">
+IEEE Transaction on Knowledge and Data Engineering</a>
+(<a href="http://www.computer.org/portal/web/tkde">TKDE</a>)
+, 2020 (if =1.3) 
+[<a href="http://yangy.org/works/robust/tkde2020_robust_xu.pdf">PDF</a>]
+</li>
+
+	
 <LI>Bo Chen, <b>Jing Zhang</b>, Jie Tang, Lingfan Cai, Zhaoyu Wang, Shu Zhao, Hong Chen, and Cuiping Li.
 CONNA: Addressing Name Disambiguation on The Fly.
 <a href="http://www.computer.org/portal/web/tkde">
