--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@ href="publications/Zhang-et-al-Expert-Finding.pdf">PDF</a>]</li>
 <h2>Journal Publications </h2>
 <ol>
 
-Jiarong Xu, Yang Yang, Chunping Wang, Zongtao Liu, <b>Jing Zhang</b>, Lei Chen and Jiangang Lu.
+<LI>Jiarong Xu, Yang Yang, Chunping Wang, Zongtao Liu, <b>Jing Zhang</b>, Lei Chen and Jiangang Lu.
 Robust Network Enhancement from Flawed Networks.
 <a href="http://www.computer.org/portal/web/tkde">
 IEEE Transaction on Knowledge and Data Engineering</a>
