--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@ My google scholar citation number is more than <a href="https://scholar.google.c
 
 <LI>Bowen Hao, <b>Jing Zhang</b>, Hongzhi Yin, Cuiping Li, and Hong Chen. Pre-Training Graph Neural Networks for Cold-Start Users and Items Representation.
 In <a href="https://ecmlpkdd2020.net/">Proceedings of International Conference on Web Search and Data Mining</a>
-(<a href="https://www.wsdm-conference.org/2021/">WSDB'21</a>).
+(<a href="https://www.wsdm-conference.org/2021/">WSDM'21</a>).
 [<a href="https://arxiv.org/pdf/2012.07064.pdf">PDF</a>]
 </LI>	
 	
