--- a/index.html
+++ b/index.html
@@ -25,24 +25,32 @@ Renmin University of China</p>
 	
 <p>	
 My current research interest falls in area of graph neural networks and knowledge graph acquisition, reasoning, disambiguation and question answering.
-My google scholar citation number is more than <a href="https://scholar.google.com/citations?user=T7Wa3GQAAAAJ&hl=en">3300</a> now.
+My google scholar citation number is more than <a href="https://scholar.google.com/citations?user=T7Wa3GQAAAAJ&hl=en">4000</a> now.
 <p>
 
 <p><font color="red"> I am looking for highly-motivated students to work with me. </font> If interested, please drop me a message by email. </p>	
 
 <h2>Preprint</h2>
 <ol>
-
-<LI><b>Jing Zhang</b>, Bo Chen, Lingxi Zhang, Xirui Ke and Haipeng Ding. Neural-Symbolic Reasoning on Knowledge Graphs.
-(<a href="https://arxiv.org/abs/2010.05446">[arxiv]</a>).
+<LI>Xiao Liu, Fanjin Zhang, Zhenyu Hou, Li Mian, Zhaoyu Wang, <b>Jing Zhang</b>, and Jie Tang. Self-supervised Learning: Generative or Contrastive.
+(<a href="https://arxiv.org/pdf/2006.08218.pdf">[arxiv]</a>).
 </LI>	
 </ol>
 	
+
+	
 <h2>Conference Publications</h2>
 <ol>
-
+<LI>Yanling Wang, <b>Jing Zhang</b>, Hongzhi Yin, Cuiping Li, and Hong Chen. Pre-Training Graph Neural Networks for Cold-Start Users and Items Representation.
+In <a href="https://www.sigir.org/sigir2012/">Proceedings of the 44rd International ACM SIGIR Conference on Research and Development in Information Retrieval</a>
+(<a href="https://www.sigir.org/sigir2012/">SIGIR'21</a>).
+[<a href="SIGIR21-Wang-et-al-decoupled-GNN">PDF</a>]
+</LI>	
+	
+	
+	
 <LI>Bowen Hao, <b>Jing Zhang</b>, Hongzhi Yin, Cuiping Li, and Hong Chen. Pre-Training Graph Neural Networks for Cold-Start Users and Items Representation.
-In <a href="https://ecmlpkdd2020.net/">Proceedings of International Conference on Web Search and Data Mining</a>
+In <a href="https://www.wsdm-conference.org/2021/">Proceedings of International Conference on Web Search and Data Mining</a>
 (<a href="https://www.wsdm-conference.org/2021/">WSDM'21</a>).
 [<a href="https://arxiv.org/pdf/2012.07064.pdf">PDF</a>]
 </LI>	
@@ -258,7 +266,37 @@ href="publications/Zhang-et-al-Expert-Finding.pdf">PDF</a>]</li>
 
 <h2>Journal Publications </h2>
 <ol>
+	
+<ol>	
+<LI><b>Jing Zhang</b>, Bo Chen, Lingxi Zhang, Xirui Ke and Haipeng Ding. Neural-Symbolic Reasoning on Knowledge Graphs.
+<a href="https://www.sciencedirect.com/journal/ai-open">
+AI Open</a>
+, 2021. 2:14-35.  
+[<a href="publications/AIOpen-Zhang-et-al-Neural-symbolic-reasoning.pdf">PDF</a>]
+[<a href="publications/AIOpen-Zhang-et-al-Neural-symbolic-reasoning.pptx">Slides_PPT</a>]
+</li>	
 
+<LI>Xiao Liu, Li Mian, Yuxiao Dong, Fanjin Zhang, <b>Jing Zhang</b>, Jie Tang, Peng Zhang, Jibing Gong, and Kuansan Wang.
+OAG_know: Self-supervised Learning for Linking Knowledge Graphs.
+<a href="http://www.computer.org/portal/web/tkde">
+IEEE Transaction on Knowledge and Data Engineering</a>
+(<a href="http://www.computer.org/portal/web/tkde">TKDE</a>)
+, 2021 (if =1.3) 
+[<a href="http://yangy.org/works/robust/tkde2020_robust_xu.pdf">PDF</a>]
+</li>
+
+
+	
+<LI>Fanjin Zhang, Jie Tang, Xueyi Liu, Zhenyu Hou, Yuxiao Dong, <b>Jing Zhang</b>, Xiao Liu, Ruobing Xie, Kai Zhuang, Xu Zhang, Leyu Lin, and Philip S. Yu.
+Understanding WeChat User Preferences and “Wow” Diffusion.
+<a href="http://www.computer.org/portal/web/tkde">
+IEEE Transaction on Knowledge and Data Engineering</a>
+(<a href="http://www.computer.org/portal/web/tkde">TKDE</a>)
+, 2021 (if =1.3) 
+[<a href="http://keg.cs.tsinghua.edu.cn/jietang/publications/TKDE21-Zhang-et-al-WeChat-Wow-Diffusion.pdf">PDF</a>]
+</li>
+
+	
 <LI>Jiarong Xu, Yang Yang, Chunping Wang, Zongtao Liu, <b>Jing Zhang</b>, Lei Chen and Jiangang Lu.
 Robust Network Enhancement from Flawed Networks.
 <a href="http://www.computer.org/portal/web/tkde">
