--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@ My google scholar citation number is more than <a href="https://scholar.google.c
 	
 <h2>Conference Publications</h2>
 <ol>
-<LI>Yanling Wang, <b>Jing Zhang</b>, Hongzhi Yin, Cuiping Li, and Hong Chen. Pre-Training Graph Neural Networks for Cold-Start Users and Items Representation.
+<LI>Yanling Wang, <b>Jing Zhang</b>, Hongzhi Yin, Cuiping Li, and Hong Chen. Decoupling Representation Learning and Classification for GNN-based Anomaly Detection.
 In <a href="https://www.sigir.org/sigir2012/">Proceedings of the 44rd International ACM SIGIR Conference on Research and Development in Information Retrieval</a>
 (<a href="https://www.sigir.org/sigir2012/">SIGIR'21</a>).
 [<a href="SIGIR21-Wang-et-al-decoupled-GNN.pdf">PDF</a>]
