--- a/index.html
+++ b/index.html
@@ -423,9 +423,13 @@ Frontiers of Computer Science in China, 2008, Volume 2, Issue 1, pages 94-105.</
 
 <h2>Academic Services</h2>
 <ul>
-<li><p>Reviewer: TKDE, TOIS, TKDD, DMKD, 中国科学</p>
+<li><p>Associate editor: AI Open</p>
+</li>
+<li><p>SPC member:IJCAI2021, PKDD/ECML2021</p>
 </li>
 <li><p>PC member:SIGKDD2021, IJCAI2021, SIGKDD2020, WWW2020, SIGKDD2019,IJCAI2016,ASONAM2016,ICWSM2016,CIKM2016,ICWSM2015,ICDM2014,ASONAM2014</p>
+</li>
+<li><p>Reviewer: TKDE, 中国科学</p>
 </li>
 </ul>
 
