--- a/index.html
+++ b/index.html
@@ -41,10 +41,31 @@ My google scholar citation number is more than <a href="https://scholar.google.c
 	
 <h2>Conference Publications</h2>
 <ol>
+	
+<LI>Yu Feng, <b>Jing Zhang</b>, Gaole He, Wayne Xin Zhao, Lemao Liu, Quan Liu, Cuiping Li, Hong Chen. 
+CODE: Contrastive Pre-training with Adversarial Fine-tuning for Zero-shot Expert Linking.
+Accepted by AAAI 2022.
+[<a href="https://arxiv.org/abs/2012.11336">Arxiv</a>]
+</LI>
+
+	
+	
+<LI>Yu Feng, <b>Jing Zhang</b>, Gaole He, Wayne Xin Zhao, Lemao Liu, Quan Liu, Cuiping Li, Hong Chen. 
+A Pretraining Numerical Reasoning Model for Ordinal Constrained Question Answering on Knowledge Base.
+In <a href="https://aclanthology.org/volumes/2021.findings-emnlp/">Findings of the Association for Computational Linguistics: EMNLP 2021</a>
+[<a href="https://aclanthology.org/2021.findings-emnlp.159.pdf">PDF</a>]
+</LI>
+	
+<LI>Jingwen Xu, <b>Jing Zhang</b>, Xirui Ke, Yuxiao Dong, Hong Chen, Cuiping Li, Yongbin Liu
+P-INT: A Path-based Interaction Model for Few-shot Knowledge Graph Completion.
+In <a href="https://aclanthology.org/volumes/2021.findings-emnlp/">Findings of the Association for Computational Linguistics: EMNLP 2021</a>
+[<a href="https://aclanthology.org/2021.findings-emnlp.35.pdf">PDF</a>]
+</LI>
+	
+	
 <LI>Yanling Wang, <b>Jing Zhang</b>, Hongzhi Yin, Cuiping Li, and Hong Chen. Decoupling Representation Learning and Classification for GNN-based Anomaly Detection.
-In <a href="https://sigir.org/sigir2021/">Proceedings of the 44rd International ACM SIGIR Conference on Research and Development in Information Retrieval</a>
-(<a href="https://sigir.org/sigir2021/">SIGIR'21</a>).
-[<a href="publications/SIGIR21-Wang-et-al-decoupled-GNN.pdf">PDF</a>]
+In <a href="https://aclanthology.org/volumes/2021.findings-emnlp/">Findings of the Association for Computational Linguistics: EMNLP 2021</a>
+[<a href="https://aclanthology.org/2021.findings-emnlp.159.pdf">PDF</a>]
 </LI>	
 	
 
