--- a/index.html
+++ b/index.html
@@ -451,7 +451,7 @@ Frontiers of Computer Science in China, 2008, Volume 2, Issue 1, pages 94-105.</
 <h2>Honors &amp; Awards</h2>
 <ul>
 <li>
-Our 2008 ArnetMiner paper has been awarded the (SIGKDD Test-of-Time Award)
+Our 2008 ArnetMiner paper has been awarded the (SIGKDD Test-of-Time Award), 2020
 </li>
 <li><p>Outstanding Worker of Information School, RUC, 2019</p>
 </li>
