--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <h1>Jing ZHANG</h1>
 <p>Associate Professor</p>
 Department of Computer Science and Technology<br>
-Information School<bar>
+School of Information<br>
 Renmin University of China</p>
 <p>Email: zhang-jing AT ruc DOT edu DOT cn</p>
 <p>Address: Room 427, Information Building, Renmin University of China, Beijing</p>
@@ -24,7 +24,7 @@ Renmin University of China</p>
 <p>Prior to that, I received my Ph.D. degree from Computer Science Department, <a href="http://www.tsinghua.edu.cn/eng/">Tsinghua University</a> under supervision of Professor <a href="http://keg.cs.tsinghua.edu.cn/jietang/">Jie Tang</a> and Professor <a href="http://www.tsinghua.edu.cn/publish/csen/4623/2010/20101224174815852865998/20101224174815852865998_.html">Juanzi Li</a>. 
 	
 <p>	
-My current research interest falls in area of graph neural networks and knowledge graph acquisition, reasoning, disambiguation and question answering.
+My current research interest falls in area of graph neural networks and knowledge graph reasoning.
 My google scholar citation number is more than <a href="https://scholar.google.com/citations?user=T7Wa3GQAAAAJ&hl=en">4000</a> now.
 <p>
 
