--- a/index.html
+++ b/index.html
@@ -485,7 +485,7 @@ on Artificial Intelligence</i>).
 	<li>2021: Invited Talk about Neural-Symbolic Reasoning on Knowledge Graphs at CCKS 2021. <a class="button" href="publications/Slides-Neural-Symbolic-Reasoning.pdf" target="_blank">slides</a> </span> </li>
 	<li>2021: Invited Talk about Knowledge Graph Question Answering on CNCC 2021. <a class="button" href="publications/Slides-KBQA.pdf" target="_blank">slides</a> </span> </li> 
 	<li>2021: Invited Talk about Graph Self-supervised Learning on CCAI 2021. <a class="button" href="publications/Slides-GraphSSL.pdf" target="_blank">slides</a> </span> </li> 
-	<li>2021: Invited Talk about Neural-Symbolic Reasnonig on Knowledge Graphs at BAAI Seminar. <a class="button" href="publications/Slides-Neural-Symbolic-Reasoning-KB.pdf" target="_blank">slides</a> </li> 
+	<li>2021: Invited Talk about Neural-Symbolic Reasoning on Knowledge Graphs at BAAI Seminar. <a class="button" href="publications/Slides-Neural-Symbolic-Reasoning-KB.pdf" target="_blank">slides</a> </li> 
 	<li>2021: Invited Talk about Graph Self-supervised Learning at School of Computer Science & Technology, HUST.
 	<li>2020: Invited Talk at NLPCC 2020 Student Workshop. <a class="button" href="publications/Slides-KBLinking.pdf" target="_blank">slides</a> </li> 
 	<li>2019: Invited Talk at Sino-German International Seminar. <a class="button" href="publications//Slides-ND.pdf" target="_blank">slides</a> </li> 
