--- a/index.html
+++ b/index.html
@@ -489,7 +489,7 @@ on Artificial Intelligence</i>).
 	<li>2021: Invited Talk about Graph Self-supervised Learning at School of Computer Science & Technology, HUST.
 	<li>2020: Invited Talk at NLPCC 2020 Student Workshop. <a class="button" href="publications/Slides-KBLinking.pdf" target="_blank">slides</a> </li> 
 	<li>2019: Invited Talk at Sino-German International Seminar. <a class="button" href="publications//Slides-ND.pdf" target="_blank">slides</a> </li> 
-	<li>2018: Invited Talk at ACML 2018 Workshop on Machine Learning in Eduation. <a class="button" href="publications/Slides-Recommendation.pdf" target="_blank">slides</a> </li> 
+	<li>2018: Invited Talk at ACML 2018 Workshop on Machine Learning in Education. <a class="button" href="publications/Slides-Recommendation.pdf" target="_blank">slides</a> </li> 
 
 </ol>
 
@@ -522,7 +522,7 @@ on Artificial Intelligence</i>).
 </p><ol>
 	<li>TKDE, IEEE Transactions on Knowledge and Data Engineering </li> 
 	<li>TOIS, ACM Transactions on Information Systems </li> 
-	<li>TPAMI,Transactions on Pattern Analysis and Machine Intelligence </li> 
+	<li>TPAMI, Transactions on Pattern Analysis and Machine Intelligence </li> 
 	<li>TKDD, ACM Transactions on the Knowledge Discovery from Data </li> 
 	<li>TWEB, ACM Transactions on the Web </li>
 	<li>TBD, IEEE Transactions on Big Data </li>
