--- a/index.html
+++ b/index.html
@@ -247,6 +247,13 @@ My research interest falls in area of data mining and natural langugae processin
  
 
 <ol>
+	<div class="pub all conf grl grl-pt">
+		<li> 
+			<a href="files/WWW22-Wang-et-al-ClusterSCL.pdf" target="_blank">ClusterSCL: Cluster-Aware Supervised Contrastive Learning on Graphs.</a>  
+			<br /> Yanling Wang, <b>Jing Zhang</b>, Haoyang Li, Yuxiao Dong, Hongzhi Yin, Cuiping Li, Hong Chen. 
+			<br /> <b>Accepted by WWW'22</b>.  
+	</li></div>
+
 	<div class="pub all conf kr kr-el">
 		<li> 
 			<a href="https://arxiv.org/abs/2012.11336" target="_blank">CODE: Contrastive Pre-training with Adversarial Fine-tuning for Zero-shot Expert Linking.</a>  
