--- a/index.html
+++ b/index.html
@@ -247,6 +247,18 @@ My research interest falls in area of data mining and natural langugae processin
  
 
 <ol>
+	<div class="pub all conf kr kr-el">
+		<li> 
+			<a href="" target="_blank">Subgraph Retrieval Enhanced Model for Multi-hop Knowledge Base Question Answering.</a>  
+			<br /> <b>Jing Zhang</b>, Xiaokang Zhang, Jifan Yu, Jian Tang, Jie Tang, Cuiping Li, Hong Chen
+			<br /> <b>Research Paper accepted by ACL'22</b>.  
+	</li></div>
+	<div class="pub all conf kr kr-el">
+		<li> 
+			<a href="" target="_blank">HOSMEL: A Hot-Swappable Modulized Entity Linking Toolkit for Chinese.</a>  
+			<br /> Daniel Zhang-Li, <b>Jing Zhang</b>, Jifan Yu, Xiaokang Zhang, Peng Zhang, Jie Tang, Juanzi Li. 
+			<br /> <b>Demo Paper accepted by ACL'22</b>.  
+	</li></div>
 	<div class="pub all conf grl grl-pt">
 		<li> 
 			<a href="publications/WWW22-Wang-et-al-ClusterSCL.pdf" target="_blank">ClusterSCL: Cluster-Aware Supervised Contrastive Learning on Graphs.</a>  
