--- a/index.html
+++ b/index.html
@@ -249,9 +249,11 @@ My research interest falls in area of data mining and natural langugae processin
 <ol>
 	<div class="pub all conf kr kr-el">
 		<li> 
-			<a href="" target="_blank">Subgraph Retrieval Enhanced Model for Multi-hop Knowledge Base Question Answering.</a>  
+			<a href="" target="publications/ACL22-Zhang-et-al-SRKBQA.pdf">Subgraph Retrieval Enhanced Model for Multi-hop Knowledge Base Question Answering.</a>  
 			<br /> <b>Jing Zhang</b>, Xiaokang Zhang, Jifan Yu, Jian Tang, Jie Tang, Cuiping Li, Hong Chen
-			<br /> <b>Research Paper accepted by ACL'22</b>.  
+			<br /> <b>Research Paper accepted by ACL'22</b>. 
+			
+			
 	</li></div>
 	<div class="pub all conf kr kr-el">
 		<li> 
