--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@ My research interest falls in area of data mining and natural langugae processin
 <ol>
 	<div class="pub all conf kr kr-el">
 		<li> 
-			<a href="" target="publications/ACL22-Zhang-et-al-SRKBQA.pdf">Subgraph Retrieval Enhanced Model for Multi-hop Knowledge Base Question Answering.</a>  
+			<a href="publications/ACL22-Zhang-et-al-SRKBQA.pdf" target="_blank">Subgraph Retrieval Enhanced Model for Multi-hop Knowledge Base Question Answering.</a>  
 			<br /> <b>Jing Zhang</b>, Xiaokang Zhang, Jifan Yu, Jian Tang, Jie Tang, Cuiping Li, Hong Chen
 			<br /> <b>Research Paper accepted by ACL'22</b>. 
 			
@@ -257,7 +257,7 @@ My research interest falls in area of data mining and natural langugae processin
 	</li></div>
 	<div class="pub all conf kr kr-el">
 		<li> 
-			<a href="" target="_blank">HOSMEL: A Hot-Swappable Modulized Entity Linking Toolkit for Chinese.</a>  
+			<a href="publications/ACL22-Zhang-et-al-SRKBQA.pdf" target="_blank">HOSMEL: A Hot-Swappable Modulized Entity Linking Toolkit for Chinese.</a>  
 			<br /> Daniel Zhang-Li, <b>Jing Zhang</b>, Jifan Yu, Xiaokang Zhang, Peng Zhang, Jie Tang, Juanzi Li. 
 			<br /> <b>Demo Paper accepted by ACL'22</b>.  
 	</li></div>
