--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@ Renmin University of China<br />
 <!--h3><a name="interest"> Research Interests</a> </h3-->
 
 <p> I am an associate professor at <a href="http://info.ruc.edu.cn/">School of Information</a>, <a href="http://www.ruc.edu.cn/">Renmin University of China</a>. Prior to that, I received my Ph.D. degree from <a href="https://www.cs.tsinghua.edu.cn/">Department of Computer Science and Technology</a>, <a href="http://www.tsinghua.edu.cn">Tsinghua University</a> under supervision of Professor <a href="http://keg.cs.tsinghua.edu.cn/jietang/">Jie Tang</a> and Professor <a href="http://keg.cs.tsinghua.edu.cn/persons/ljz/">Juanzi Li</a>. 
-My research interest falls in area of data mining and natural langugae processing. My current research focuses on performing knowledge reasoning on knowledge graphs and documents by pretraining language models and graph neural networks. More information about my experience and research can be found on <a href="https://scholar.google.com/citations?user=T7Wa3GQAAAAJ&hl=en" target="_blank">Google Scholar</a>.
+My research interest falls in area of data mining and natural language processing. My current research focuses on performing knowledge reasoning on knowledge graphs and documents by pretraining language models and graph neural networks. More information about my experience and research can be found on <a href="https://scholar.google.com/citations?user=T7Wa3GQAAAAJ&hl=en" target="_blank">Google Scholar</a>.
 <p>
 
 <p><font color="red"> I am looking for highly-motivated students to work with me. </font> If interested, please drop me a message by email. </p>	
