--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@ My research interest falls in area of data mining and natural language processin
 
 	<div class="pub all conf kr kr-el">
 		<li> 
-			<a href="https://arxiv.org/abs/2012.11336" target="_blank">CODE: Contrastive Pre-training with Adversarial Fine-tuning for Zero-shot Expert Linking.</a>  
+			<a href="https://www.aaai.org/AAAI22Papers/AISI-5772.ChenB.pdf" target="_blank">CODE: Contrastive Pre-training with Adversarial Fine-tuning for Zero-shot Expert Linking.</a>  
 			<br /> Bo Chen, <b>Jing Zhang</b>, Xiaokang Zhang, Xiaobin Tang, Lingfan Cai, Hong Chen, Cuiping Li, Peng Zhang, Jie Tang. 
 			<br /> <b>Accepted by AAAI'22</b>.  
 	</li></div>
