--- a/index.html
+++ b/index.html
@@ -249,22 +249,28 @@ My research interest falls in area of data mining and natural language processin
 <ol>
 	<div class="pub all conf kr kr-el">
 		<li> 
+			<a href="https://aclanthology.org/2022.acl-long.396.pdf" target="_blank">Subgraph Retrieval Enhanced Model for Multi-hop Knowledge Base
+Question Answering.</a>  
+			<br /> <b>Jing Zhang</b>, Xiaokang Zhang, Jifan Yu, Jian Tang, Jie Tang, Cuiping Li, Hong Chen. 
+			<br /> <b>ACL'22</b>.  
+	</li></div>
+	<div class="pub all conf kr kr-el">
+		<li> 
 			<a href="publications/ACL22-demo-HOSMEL-Zhang-et-al.pdf" target="_blank">HOSMEL: A Hot-Swappable Modulized Entity Linking Toolkit for Chinese.</a>  
 			<br /> Daniel Zhang-Li, <b>Jing Zhang</b>, Jifan Yu, Xiaokang Zhang, Peng Zhang, Jie Tang, Juanzi Li. 
-			<br /> <b>Demo Paper accepted by ACL'22</b>.  
+			<br /> <b>ACL'22 (Demo)</b>.  
 	</li></div>
 	<div class="pub all conf grl grl-pt">
 		<li> 
 			<a href="publications/WWW22-Wang-et-al-ClusterSCL.pdf" target="_blank">ClusterSCL: Cluster-Aware Supervised Contrastive Learning on Graphs.</a>  
 			<br /> Yanling Wang, <b>Jing Zhang</b>, Haoyang Li, Yuxiao Dong, Hongzhi Yin, Cuiping Li, Hong Chen. 
-			<br /> <b>Accepted by WWW'22</b>.  
+			<br /> <b>WWW'22</b>.  
 	</li></div>
-
 	<div class="pub all conf kr kr-el">
 		<li> 
 			<a href="https://www.aaai.org/AAAI22Papers/AISI-5772.ChenB.pdf" target="_blank">CODE: Contrastive Pre-training with Adversarial Fine-tuning for Zero-shot Expert Linking.</a>  
 			<br /> Bo Chen, <b>Jing Zhang</b>, Xiaokang Zhang, Xiaobin Tang, Lingfan Cai, Hong Chen, Cuiping Li, Peng Zhang, Jie Tang. 
-			<br /> <b>Accepted by AAAI'22</b>.  
+			<br /> <b>AAAI'22</b>.  
 	</li></div>
 
 
