--- a/index.html
+++ b/index.html
@@ -223,6 +223,7 @@ My research interest falls in area of data mining and natural language processin
 			<a class="url"  onclick="show('kr-ea')">entity alignment</a> |
 			<a class="url"  onclick="show('kr-kgc')">knowledge graph completion</a> |
 			<a class="url"  onclick="show('kr-qa')">question answering</a> 
+			<a class="url"  onclick="show('kr-dialogue')">question answering</a> 
 		<br />
 	</li>
 
@@ -247,6 +248,32 @@ My research interest falls in area of data mining and natural language processin
  
 
 <ol>
+	<div class="pub all conf grl grl-pt">
+		<li> 
+			<a href="https://arxiv.org/abs/2108.07516" target="_blank">Graph Contrastive Learning for Anomaly Detection.</a>  
+			<br /> Bo Chen, <b>Jing Zhang</b>, Xiaokang Zhang, Yuxiao Dong, Jian Song, Peng Zhang, Kaibo Xu, Evgeny Kharlamov, Jie Tang.
+			<br /> <b>TKDE'22 </b>. 
+	</li></div>
+	<div class="pub all conf kr kr-qa">
+		<li> 
+			<a href="" target="_blank">DSM: Question Generation over Knowledge Base via Modeling Diverse Subgraphs with Meta-learner.</a>  
+			<br /> Shasha Guo, <b>Jing Zhang</b>, Yanling Wang, Qianyi Zhang, Cuiping Li and Hong Chen.
+			<br /> <b>EMNLP'22 </b>. 
+	</li></div>
+
+	<div class="pub all conf kr kr-qa">
+		<li> 
+			<a href="" target="_blank">Knowledge-augmented Self-training of A Question Rewriter for Conversational Knowledge Base Question Answering.</a>  
+			<br /> Xirui Ke, <b>Jing Zhang</b>, Xin Lv, Yiqi Xu, Shulin Cao, Cuiping Li, Hong Chen and Juanzi Li. 
+			<br /> <b>Findings of EMNLP'22 </b> (<i>Findings of the Association for Computational Linguistics: EMNLP 2022</i>). 
+	</li></div>
+	<div class="pub all conf kr kr-dialogue">
+		<li> 
+			<a href="https://dl.acm.org/doi/abs/10.1145/3534678.3539135" target="_blank">XDAI: A Tuning-free Framework for Exploiting Pre-trained Language Models in Knowledge Grounded Dialogue Generation.</a>  
+			<br /> Jifan Yu, Xiaohan Zhang, Yifan Xu, Xuanyu Lei, Xinyu Guan, <b>Jing Zhang</b>, Lei Hou, Juanzi Li, and Jie Tang. 
+			<br /> <b>KDD'22</b>.  
+			<br /> <a href="https://aigc.aminer.cn/xdai/index" target="_blank">Demo</a>.
+	</li></div>
 	<div class="pub all conf kr kr-el">
 		<li> 
 			<a href="https://aclanthology.org/2022.acl-long.396.pdf" target="_blank">Subgraph Retrieval Enhanced Model for Multi-hop Knowledge Base
