--- a/index.html
+++ b/index.html
@@ -528,7 +528,9 @@ on Artificial Intelligence</i>).
 <hr />
 <h3 class="big"><a name="talks"> Invited Talks </a></h3>
 <ol>
-	<li>2021: Invited Talk about Neural-Symbolic Reasoning on Knowledge Graphs at CCKS 2021. <a class="button" href="publications/Slides-Neural-Symbolic-Reasoning.pdf" target="_blank">slides</a> </span> </li>
+	<li>2022: Invited Talk about Graph Constrastive Learning at BAAI Seminar 2022. <a class="button" href="publications/Slides-Cluster-Enhanced Graph Contrastive Learning-zhangjing-2022.6.2.pdf" target="_blank">slides</a> </span> </li>
+	<li>2022: Invited Talk about Knowledge Graph Question Answering on WAIC 2022. <a class="button" href="publications/Slides-KBQA-Zhangjing-WAIC-2022.9.2" target="_blank">slides</a> </span> </li> 
+	<li>2021: Invited Talk about Neural-Symbolic Reasoning on Knowledge Graphs on CCKS 2021. <a class="button" href="publications/Slides-Neural-Symbolic-Reasoning.pdf" target="_blank">slides</a> </span> </li>
 	<li>2021: Invited Talk about Knowledge Graph Question Answering on CNCC 2021. <a class="button" href="publications/Slides-KBQA.pdf" target="_blank">slides</a> </span> </li> 
 	<li>2021: Invited Talk about Graph Self-supervised Learning on CCAI 2021. <a class="button" href="publications/Slides-GraphSSL.pdf" target="_blank">slides</a> </span> </li> 
 	<li>2021: Invited Talk about Neural-Symbolic Reasoning on Knowledge Graphs at BAAI Seminar. <a class="button" href="publications/Slides-Neural-Symbolic-Reasoning-KB.pdf" target="_blank">slides</a> </li> 
