--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@ My research interest falls in area of data mining and natural language processin
 			<a href="https://dl.acm.org/doi/abs/10.1145/3534678.3539135" target="_blank">XDAI: A Tuning-free Framework for Exploiting Pre-trained Language Models in Knowledge Grounded Dialogue Generation.</a>  
 			<br /> Jifan Yu, Xiaohan Zhang, Yifan Xu, Xuanyu Lei, Xinyu Guan, <b>Jing Zhang</b>, Lei Hou, Juanzi Li, and Jie Tang. 
 			<br /> <b>KDD'22</b>.  
-			<br /> <a href="https://aigc.aminer.cn/xdai/index" target="_blank">Demo</a>.
+			<br /> <a href="https://aigc.aminer.cn/xdai/index" target="_blank"><b>Online Chatbot</b></a>.
 	</li></div>
 	<div class="pub all conf kr kr-el">
 		<li> 
