--- a/index.html
+++ b/index.html
@@ -255,14 +255,14 @@ My research interest falls in area of data mining and natural language processin
 	</li></div>
 	<div class="pub all conf kr kr-qa">
 		<li> 
-			<a href="" target="_blank">DSM: Question Generation over Knowledge Base via Modeling Diverse Subgraphs with Meta-learner.</a>  
+			<a href="publications/EMNLP22-Guo-et-al-DSM.pdf" target="_blank">DSM: Question Generation over Knowledge Base via Modeling Diverse Subgraphs with Meta-learner.</a>  
 			<br /> Shasha Guo, <b>Jing Zhang</b>, Yanling Wang, Qianyi Zhang, Cuiping Li and Hong Chen.
 			<br /> <b>EMNLP'22 </b>. 
 	</li></div>
 
 	<div class="pub all conf kr kr-qa">
 		<li> 
-			<a href="" target="_blank">Knowledge-augmented Self-training of A Question Rewriter for Conversational Knowledge Base Question Answering.</a>  
+			<a href="publications/EMNLP22-Ke-et-al-ConversationKBQA.pdf" target="_blank">Knowledge-augmented Self-training of A Question Rewriter for Conversational Knowledge Base Question Answering.</a>  
 			<br /> Xirui Ke, <b>Jing Zhang</b>, Xin Lv, Yiqi Xu, Shulin Cao, Cuiping Li, Hong Chen and Juanzi Li. 
 			<br /> <b>Findings of EMNLP'22 </b> (<i>Findings of the Association for Computational Linguistics: EMNLP 2022</i>). 
 	</li></div>
