--- a/index.html
+++ b/index.html
@@ -221,8 +221,9 @@ My research interest falls in area of data mining and natural language processin
 			<a class="url"  onclick="show('kr-el')">entity linking</a> |
 			<a class="url"  onclick="show('kr-ea')">entity alignment</a> |
 			<a class="url"  onclick="show('kr-kgc')">knowledge graph completion</a> |
-			<a class="url"  onclick="show('kr-qa')">question answering</a> 
-			<a class="url"  onclick="show('kr-dialogue')">question answering</a> 
+			<a class="url"  onclick="show('kr-qa')">question answering</a>  |
+			<a class="url"  onclick="show('kr-dialogue')">dialogue</a>  |
+			<a class="url"  onclick="show('kr-text2sql')">text2sql</a> 
 		<br />
 	</li>
 
@@ -247,7 +248,13 @@ My research interest falls in area of data mining and natural language processin
  
 
 <ol>
-	<div class="pub all conf grl grl-pt">
+	<div class="pub all conf kr kr-text2sql">
+		<li> 
+			<a href="https://arxiv.org/abs/2302.05965" target="_blank">RESDSQL: Decoupling Schema Linking and Skeleton Parsing for Text-to-SQL.</a>  
+			<br /> Haoyang Li, <b>Jing Zhang</b>, Cuiping Li, Hong Chen.
+			<br /> <b>AAAI'23 </b>. 
+	</li></div>
+	<div class="pub all journal grl grl-pt">
 		<li> 
 			<a href="https://arxiv.org/abs/2108.07516" target="_blank">Graph Contrastive Learning for Anomaly Detection.</a>  
 			<br /> Bo Chen, <b>Jing Zhang</b>, Xiaokang Zhang, Yuxiao Dong, Jian Song, Peng Zhang, Kaibo Xu, Evgeny Kharlamov, Jie Tang.
