--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@ Renmin University of China<br />
 <!--h3><a name="interest"> Research Interests</a> </h3-->
 
 <p> I am an associate professor at <a href="http://info.ruc.edu.cn/">School of Information</a>, <a href="http://www.ruc.edu.cn/">Renmin University of China</a>. Prior to that, I received my Ph.D. degree from <a href="https://www.cs.tsinghua.edu.cn/">Department of Computer Science and Technology</a>, <a href="http://www.tsinghua.edu.cn">Tsinghua University</a> under supervision of Professor <a href="http://keg.cs.tsinghua.edu.cn/jietang/">Jie Tang</a> and Professor <a href="http://keg.cs.tsinghua.edu.cn/persons/ljz/">Juanzi Li</a>. 
-My research interest falls in area of data mining and natural language processing. My current research focuses on knowledge reasoning and knowledge grounded dialogue. More information about my experience and research can be found on <a href="https://scholar.google.com/citations?user=T7Wa3GQAAAAJ&hl=en" target="_blank">Google Scholar</a>.
+My research interest falls in data mining and natural language processing. My current research focuses on large language models and knowledge engineering. More information about my experience and research can be found on <a href="https://scholar.google.com/citations?user=T7Wa3GQAAAAJ&hl=en" target="_blank">Google Scholar</a>.
 <p>
 
 <p><font color="red"> I am looking for highly-motivated students to work with me. </font> If interested, please drop me a message by email. </p>	
@@ -215,7 +215,12 @@ My research interest falls in area of data mining and natural language processin
 			<a class="url"  onclick="show('journal')">journal</a> | 
 			<a class="url"  onclick="show('preprint')">pre-print</a> 
 	</li>
-
+	<li style="list-style-type:none">
+		<b>	<a class="url"  onclick="show('LLM')">large language model</a> </b>:  
+			<a class="url"  onclick="show('LLM-prompt')">prompt engineering</a> |
+			<a class="url"  onclick="show('LLM-ka')">knowledge augmentation</a> |
+		<br />
+	</li>
 	<li style="list-style-type:none">
 		<b>	<a class="url"  onclick="show('kr')">knowledge reasoning</a> </b>:  
 			<a class="url"  onclick="show('kr-el')">entity linking</a> |
@@ -248,6 +253,30 @@ My research interest falls in area of data mining and natural language processin
  
 
 <ol>
+	<div class="pub all conf kr kr-dialogue LLM LLM-ka">
+		<li> 
+			<a href="https://arxiv.org/pdf/2302.14401.pdf" target="_blank">GLM-Dialog: Noise-tolerant Pre-training for Knowledge-grounded Dialogue Generation.</a>  
+			<br /> <b>Jing Zhang<>/b, Xiaokang Zhang, Daniel Zhang-Li, Jifan Yu, Zijun Yao, Zeyao Ma, Yiqi Xu, Haohua Wang, Xiaohan Zhang, Nianyi Lin, Sunrui Lu, Juanzi Li, Jie Tang.
+			<br /> <b>KDD'23 (ADS)</b>. 
+	</li></div>
+	<div class="pub all conf kr kr-el">
+		<li> 
+			<a href="https://arxiv.org/pdf/2302.11848.pdf" target="_blank">Web-Scale Academic Name Disambiguation: the WhoIsWho Benchmark, Leaderboard, and Toolkit.</a>  
+			<br /> Bo Chen, <b>Jing Zhang<>/b, Fanjin Zhang, Tianyi Han, Yuqing Cheng, Xiaoyan Li, Yuxiao Dong, Jie Tang.
+			<br /> <b>KDD'23 (ADS)</b>. 
+	</li></div>
+	<div class="pub all conf kr kr-qa">
+		<li> 
+			<a href="https://arxiv.org/pdf/2306.14722.pdf" target="_blank">FC-KBQA: A Fine-to-Coarse Composition Framework for Knowledge Base Question Answering.</a>  
+			<br /> Lingxi Zhang, <b>Jing Zhang</b>, Yanling Wang, Shulin Cao, Xinmei Huang, Cuiping Li, Hong Chen, Juanzi Li.
+			<br /> <b>ACL'23 </b>. 
+	</li></div>
+	<div class="pub all conf LLM LLM-prompt">
+		<li> 
+			<a href="" target="_blank">Chain of Thought Prompting Elicits Knowledge Augmentation.</a>  
+			<br /> Dingjun Wu, <b>Jing Zhang</b>, Xinmei Huang.
+			<br /> <b>Findings of ACL'23 </b>. 
+	</li></div>
 	<div class="pub all conf kr kr-text2sql">
 		<li> 
 			<a href="https://arxiv.org/abs/2302.05965" target="_blank">RESDSQL: Decoupling Schema Linking and Skeleton Parsing for Text-to-SQL.</a>  
