--- a/index.html
+++ b/index.html
@@ -256,13 +256,13 @@ My research interest falls in data mining and natural language processing. My cu
 	<div class="pub all conf kr kr-dialogue LLM LLM-ka">
 		<li> 
 			<a href="https://arxiv.org/pdf/2302.14401.pdf" target="_blank">GLM-Dialog: Noise-tolerant Pre-training for Knowledge-grounded Dialogue Generation.</a>  
-			<br /> <b>Jing Zhang<>/b, Xiaokang Zhang, Daniel Zhang-Li, Jifan Yu, Zijun Yao, Zeyao Ma, Yiqi Xu, Haohua Wang, Xiaohan Zhang, Nianyi Lin, Sunrui Lu, Juanzi Li, Jie Tang.
+			<br /> <b>Jing Zhang</b>, Xiaokang Zhang, Daniel Zhang-Li, Jifan Yu, Zijun Yao, Zeyao Ma, Yiqi Xu, Haohua Wang, Xiaohan Zhang, Nianyi Lin, Sunrui Lu, Juanzi Li, Jie Tang.
 			<br /> <b>KDD'23 (ADS)</b>. 
 	</li></div>
 	<div class="pub all conf kr kr-el">
 		<li> 
 			<a href="https://arxiv.org/pdf/2302.11848.pdf" target="_blank">Web-Scale Academic Name Disambiguation: the WhoIsWho Benchmark, Leaderboard, and Toolkit.</a>  
-			<br /> Bo Chen, <b>Jing Zhang<>/b, Fanjin Zhang, Tianyi Han, Yuqing Cheng, Xiaoyan Li, Yuxiao Dong, Jie Tang.
+			<br /> Bo Chen, <b>Jing Zhang</b>, Fanjin Zhang, Tianyi Han, Yuqing Cheng, Xiaoyan Li, Yuxiao Dong, Jie Tang.
 			<br /> <b>KDD'23 (ADS)</b>. 
 	</li></div>
 	<div class="pub all conf kr kr-qa">
