--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 	<meta name="description" content="Jing Zhang's Homepage" />
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-	<meta name="keywords" content="Jing Zhang, data mining, natural langugae processing, graph neural networks, knowledge graphs" />
+	<meta name="keywords" content="Jing Zhang, data mining, natural language processing, large language models, graph neural networks, knowledge graphs" />
 	<link href="/favicon.ico?v=2" rel="shortcut icon" />
 
 <style>
@@ -218,7 +218,7 @@ My research interest falls in data mining and natural language processing. My cu
 	<li style="list-style-type:none">
 		<b>	<a class="url"  onclick="show('LLM')">large language model</a> </b>:  
 			<a class="url"  onclick="show('LLM-prompt')">prompt engineering</a> |
-			<a class="url"  onclick="show('LLM-ka')">knowledge augmentation</a> |
+			<a class="url"  onclick="show('LLM-ka')">knowledge augmentation</a> 
 		<br />
 	</li>
 	<li style="list-style-type:none">
