--- a/index.html
+++ b/index.html
@@ -283,7 +283,7 @@ My research interest falls in data mining and natural language processing. My cu
 			<br /> Haoyang Li, <b>Jing Zhang</b>, Cuiping Li, Hong Chen.
 			<br /> <b>AAAI'23 </b>. 
 	</li></div>
-	<div class="pub all conf kr kr-qa">
+	<div class="pub all journal kr kr-qa">
 		<li> 
 			<a href="https://www.sciencedirect.com/science/article/pii/S2666651022000249" target="_blank">A survey on complex factual question answering.</a>  
 			<br /> Lingxi Zhang, <b>Jing Zhang</b>, Xirui Ke, Haoyang Li, Xinmei Huang, Zhonghui Shao, Shulin Cao, Xin Lv.
