--- a/index.html
+++ b/index.html
@@ -269,45 +269,45 @@ My research interest falls in data mining and natural language processing. My cu
 		<li> 
 			<a href="https://arxiv.org/pdf/2306.14722.pdf" target="_blank">FC-KBQA: A Fine-to-Coarse Composition Framework for Knowledge Base Question Answering.</a>  
 			<br /> Lingxi Zhang, <b>Jing Zhang</b>, Yanling Wang, Shulin Cao, Xinmei Huang, Cuiping Li, Hong Chen, Juanzi Li.
-			<br /> <b>ACL'23 </b>. 
+			<br /> <b>ACL'23</b>. 
 	</li></div>
 	<div class="pub all conf LLM LLM-prompt">
 		<li> 
 			<a href="" target="_blank">Chain of Thought Prompting Elicits Knowledge Augmentation.</a>  
 			<br /> Dingjun Wu, <b>Jing Zhang</b>, Xinmei Huang.
-			<br /> <b>Findings of ACL'23 </b>. 
+			<br /> <b>Findings of ACL'23</b>. 
 	</li></div>
 	<div class="pub all conf kr kr-text2sql">
 		<li> 
 			<a href="https://arxiv.org/abs/2302.05965" target="_blank">RESDSQL: Decoupling Schema Linking and Skeleton Parsing for Text-to-SQL.</a>  
 			<br /> Haoyang Li, <b>Jing Zhang</b>, Cuiping Li, Hong Chen.
-			<br /> <b>AAAI'23 </b>. 
+			<br /> <b>AAAI'23</b>. 
 	</li></div>
 	<div class="pub all journal kr kr-qa">
 		<li> 
 			<a href="https://www.sciencedirect.com/science/article/pii/S2666651022000249" target="_blank">A survey on complex factual question answering.</a>  
 			<br /> Lingxi Zhang, <b>Jing Zhang</b>, Xirui Ke, Haoyang Li, Xinmei Huang, Zhonghui Shao, Shulin Cao, Xin Lv.
-			<br /> <b>AI Open'22 </b>. 
+			<br /> <b>AI Open'22</b>. 
 	</li></div>
 	
 	<div class="pub all journal grl grl-pt">
 		<li> 
 			<a href="https://arxiv.org/abs/2108.07516" target="_blank">Graph Contrastive Learning for Anomaly Detection.</a>  
 			<br /> Bo Chen, <b>Jing Zhang</b>, Xiaokang Zhang, Yuxiao Dong, Jian Song, Peng Zhang, Kaibo Xu, Evgeny Kharlamov, Jie Tang.
-			<br /> <b>TKDE'22 </b>. 
+			<br /> <b>TKDE'22</b>. 
 	</li></div>
 	<div class="pub all conf kr kr-qa">
 		<li> 
 			<a href="publications/EMNLP22-Guo-et-al-DSM.pdf" target="_blank">DSM: Question Generation over Knowledge Base via Modeling Diverse Subgraphs with Meta-learner.</a>  
 			<br /> Shasha Guo, <b>Jing Zhang</b>, Yanling Wang, Qianyi Zhang, Cuiping Li and Hong Chen.
-			<br /> <b>EMNLP'22 </b>. 
+			<br /> <b>EMNLP'22</b>. 
 	</li></div>
 
 	<div class="pub all conf kr kr-qa">
 		<li> 
 			<a href="publications/EMNLP22-Ke-et-al-ConversationKBQA.pdf" target="_blank">Knowledge-augmented Self-training of A Question Rewriter for Conversational Knowledge Base Question Answering.</a>  
 			<br /> Xirui Ke, <b>Jing Zhang</b>, Xin Lv, Yiqi Xu, Shulin Cao, Cuiping Li, Hong Chen and Juanzi Li. 
-			<br /> <b>Findings of EMNLP'22 </b> (<i>Findings of the Association for Computational Linguistics: EMNLP 2022</i>). 
+			<br /> <b>Findings of EMNLP'22</b> (<i>Findings of the Association for Computational Linguistics: EMNLP 2022</i>). 
 	</li></div>
 	<div class="pub all conf kr kr-dialogue">
 		<li> 
@@ -549,6 +549,12 @@ Question Answering.</a>
 			<br /> <b>IJCAI'13</b> (<i>Proceedings of the 23rd International Joint Conference
 on Artificial Intelligence</i>).  
 	</li></div>	
+	<div class="pub all journal kr kr-el kr-ea">
+	<li> 
+			<a href="https://ieeexplore.ieee.org/document/5680902" target="_blank">Jie Tang, A.C.M. Fong, Bo Wang, and Jing Zhang. </a>  
+			<br /> Jie Tang, A.C.M. Fong, Bo Wang, and <b>Jing Zhang</b>b. 
+			<br /> <b>TKDE'12</b>.  
+	</li></div>	
 
 	<div class="pub all conf kr kr-ea kr-el social recommendation">
 		<li> 
@@ -570,7 +576,7 @@ on Artificial Intelligence</i>).
 <hr />
 <h3 class="big"><a name="talks"> Invited Talks </a></h3>
 <ol>
-	<li>2022: Invited Talk about Graph Constrastive Learning at BAAI Seminar 2022. <a class="button" href="publications/Slides-Cluster-Enhanced Graph Contrastive Learning-zhangjing-2022.6.2.pdf" target="_blank">slides</a> </span> </li>
+	<li>2022: Invited Talk about Graph Contrastive Learning at BAAI Seminar 2022. <a class="button" href="publications/Slides-Cluster-Enhanced Graph Contrastive Learning-zhangjing-2022.6.2.pdf" target="_blank">slides</a> </span> </li>
 	<li>2022: Invited Talk about Knowledge Graph Question Answering on WAIC 2022. <a class="button" href="publications/Slides-KBQA-Zhangjing-WAIC-2022.9.2.pdf" target="_blank">slides</a> </span> </li> 
 	<li>2021: Invited Talk about Neural-Symbolic Reasoning on Knowledge Graphs on CCKS 2021. <a class="button" href="publications/Slides-Neural-Symbolic-Reasoning.pdf" target="_blank">slides</a> </span> </li>
 	<li>2021: Invited Talk about Knowledge Graph Question Answering on CNCC 2021. <a class="button" href="publications/Slides-KBQA.pdf" target="_blank">slides</a> </span> </li> 
@@ -592,6 +598,7 @@ on Artificial Intelligence</i>).
 <b>Journal Editors:</b>
 </p>
 <ol>
+	<li>Associate Editor of IEEE TBD, 2023--</li>
 	<li>Associate Editor of AI OPEN, 2020--</li>
 </ol>
 
@@ -600,6 +607,7 @@ on Artificial Intelligence</i>).
 <b>Conference PC members:</b> 
 <br />
 </p><ol>
+	<li>2023: KDD, WWW (SPC), AAAI, ECML/PKDD (SPC) 
 	<li>2022: KDD, WWW, IJCAI, AAAI, WSDM
 	<li>2021: KDD, WWW, IJCAI, ECML/PKDD (SPC) 
 	<li>2020: KDD, WWW, IJCAI, ECML/PKDD
